# ai-marketplace

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTION_GUIDELINES.md  GETTING_STARTED.md  INSTALL.md  README.md  REPO_ARCH.md  TORCH_COMPILE_TOOLS.md  __init__.py  generate_real_logs.py  hooks.json  pyproject.toml  server.py  settings.json  setup.sh
.claude-marketplace/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
agents/: aot-expert.md  bisector.md  compile-debug.md  coordinator.md  dynamo-expert.md  inductor-expert.md
ai-writer/.claude-plugin/: plugin.json
analyzers/: __init__.py  aot_parsers.py  aot_post_grad.py  aot_trace.py  cross_stage_trace.py  dynamo_parsers.py  dynamo_trace.py  inductor_parsers.py  inductor_trace.py
ci-runner-demo/hooks/: hooks.json
coordinator/: README.md
deterministic-hook/: README.md
docs/: AGENTS.md  CONTAINER_SETUP.md  COORDINATOR_INTEGRATION.md  CURRENT_STATUS.md  INDEX.md  INSTALLATION.md  MCP_TOOL_REGISTRATION.md  ORCHESTRATION.md  PROMPT_COMPARISON.md  SKILLS.md  STRUCTURE.md  plan.md
prompts/: README.md  coordinator-concise.md  dynamo-expert-concise.md  inductor-expert-concise.md  tracing-agent-concise.md  tracing-agent-concise.md.archived
schemas/: aot_response.json  coordinator_routing.json  dynamo_response.json  handoff_request.json  inductor_response.json
scripts/: agent_allowlist.py  ensure-setup.sh  orchestrate.py  orchestrate_schemas.py  sync-agent-skills.py  validate-skills.py  validate_handoff.py
test-generation/: README.md
tests/: conftest.py  test_orchestrate.py
torch-compile/: TORCH_COMPILE_TOOLS.md
torch-distributed/: settings.json
vllm-compile/: README.md
(+132 files in other folders)
